--- a/quarkus-kml-postgres2infinispan/src/main/resources/application.properties
+++ b/quarkus-kml-postgres2infinispan/src/main/resources/application.properties
@@ -27,6 +27,7 @@ quarkus.http.port=8092
 quarkus.infinispan-client.server-list=localhost:11223;localhost:11222;localhost:11224;localhost:11225
 quarkus.infinispan-client.auth-username=admin
 quarkus.infinispan-client.auth-password=password
+quarkus.infinispan-client.client-intelligence=BASIC
 
 # cache to put copy of 'cliente' entity
 camel.infinispan.cache.cliente=cliente
