--- a/droneCrud/drone-crud/src/main/resources/application.properties
+++ b/droneCrud/drone-crud/src/main/resources/application.properties
@@ -2,3 +2,9 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=admin
 quarkus.datasource.password=password
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
+
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:4200,http://localhost:9090
+quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
+quarkus.http.cors.methods=GET, OPTIONS, POST, DELETE
+quarkus.http.cors.exposed-headers=Content-Disposition
