--- a/droneCrud/drone-crud/src/main/resources/application.properties
+++ b/droneCrud/drone-crud/src/main/resources/application.properties
@@ -3,8 +3,10 @@ quarkus.datasource.username=admin
 quarkus.datasource.password=password
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
 
+quarkus.http.port=8095
+
 quarkus.http.cors=true
-quarkus.http.cors.origins=http://localhost:4200,http://localhost:9090
+quarkus.http.cors.origins=*
 quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
 quarkus.http.cors.methods=GET, OPTIONS, POST, DELETE
 quarkus.http.cors.exposed-headers=Content-Disposition
