--- a/drone-kafka-consumer/pom.xml
+++ b/drone-kafka-consumer/pom.xml
@@ -102,6 +102,17 @@
             <artifactId>quarkus-kubernetes-config</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-bean</artifactId>
+          </dependency>
+
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-telegram</artifactId>
+        </dependency>
+
+
         <!-- For oauth use case -->
         <dependency>
             <groupId>io.strimzi</groupId>
