atualiza integração com telegram

--- a/drone-kafka-consumer/src/main/resources/application.properties
+++ b/drone-kafka-consumer/src/main/resources/application.properties
@@ -6,9 +6,9 @@ camel.main.beanIntrospectionLoggingLevel = INFO
 kafka.topic.name=localhost-postgres.public.tb_drones
 
 # Kafka brokers in native test
-%dev.camel.component.kafka.brokers=kafka:9092
+%dev.camel.component.kafka.brokers=172.19.0.4:9092
 
-camel.component.telegram.authorization-token=coloque-seu-token
+camel.component.telegram.authorization-token=put-your-token
 # How often should the messages be generated and pushed to Kafka Topic
 timer.period = 10000
 timer.delay = 10000
