--- a/postgres-docker/docker-compose.yml
+++ b/postgres-docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
 
   db:
-    image: debezium/postgres
+    image: debezium/postgres:latest
     # image: postgres
     container_name: postgres
     hostname: postgres
@@ -16,12 +16,22 @@ services:
     volumes:
       - vol-postgresdbz:/var/lib/postgresql/data
       - ./postgres.conf:/usr/share/postgresql/postgresql.conf
+      - ./sql/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
 
   adminer:
     image: adminer
     restart: always
     ports:  
       - 8080:8080
+
+  # drone-crud:
+  #   build:
+  #     context: ../drone-crud/
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - 8000:8000
+  #   depends_on:
+  #     - db
 
 volumes:
   vol-postgresdbz:
